Revert "Fixing cards alignmend in ecosystem cards and adding date to be dynamic"

--- a/src/styles/components/ecosystem/ecosystem.scss
+++ b/src/styles/components/ecosystem/ecosystem.scss
@@ -232,7 +232,6 @@
 		height: 100%;
 		@include element(logo) {
 			align-self: flex-start;
-			min-height: 50px;
 			img {
 				max-height: 50px;
 				max-width: 170px;
